--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body >
+  small update
 <div appml-include-html="./nav.html" class="container-fluid sticky-top bg-white"></div>
 <div class="-bg-dark  -text-white">
 <h1 class="text-center display-1">Customers</h1>
